// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffOperationWithSpec yields diffs for paths with no methods 1`] = `
{
  "kind": "UnmatchedPath",
  "subject": "/orders/{orderId}/products",
}
`;

exports[`diffOperationWithSpec yields diffs for unmatched methods 1`] = `
{
  "kind": "UnmatchedMethod",
  "pathPattern": "/orders/{orderId}/products",
  "subject": "post",
}
`;

exports[`diffOperationWithSpec yields diffs for unmatched methods 2`] = `
[
  {
    "kind": "UnmatchedMethod",
    "pathPattern": "/orders/{orderId}/products",
    "subject": "post",
  },
  {
    "kind": "UnmatchedMethod",
    "pathPattern": "/orders/{orderId}/products",
    "subject": "put",
  },
]
`;

exports[`diffOperationWithSpec yields diffs for unmatched paths 1`] = `
{
  "kind": "UnmatchedPath",
  "subject": "/orders/{orderId}/transaction",
}
`;
